hide the translation available flag if context panel open to prevent overflow

--- a/imports/ui/components/commentary/commentary.import.less
+++ b/imports/ui/components/commentary/commentary.import.less
@@ -768,6 +768,10 @@ header .line-wrap {
     display: none;
   }
 
+	.translation-available-flag {
+		display: none;
+	}
+
 }
 
 .ahcip-spinner {
